Fix layout shift

--- a/projects/composition/src/app/pages/button-page/button-page.component.scss
+++ b/projects/composition/src/app/pages/button-page/button-page.component.scss
@@ -37,5 +37,6 @@
   &__message {
     color: var(--cps-color-depth);
     font-style: italic;
+    min-height: 1.5em;
   }
 }
